syntax = "proto3";

option csharp_namespace = "CleanArchitecture.Proto.Facultades";

import "Facultades/Models.proto";

service FacultadesApi {
  rpc GetByIds(GetFacultadesByIdsRequest) returns (GetFacultadesByIdsResult);
}
